fix: square .box overflow

--- a/src/components/_box.scss
+++ b/src/components/_box.scss
@@ -275,6 +275,7 @@
 		}
 		&[class*="-square"] {
 			margin: 0 auto;
+			overflow: hidden;
 			&:before {
 				content: "";
 				display: block;
